--- a/src/main/resources/templates/admin/product/page-list-product.html
+++ b/src/main/resources/templates/admin/product/page-list-product.html
@@ -60,11 +60,10 @@
                                 </td>
                                 <td>
                                     <div class="d-flex align-items-center">
-                                        <img th:src="@{${product.thumbnail}}" class="img-fluid rounded avatar-50 mr-3"
+                                        <img th:src="@{'/uploads/' + ${product.thumbnail}}"
+                                             class="img-fluid rounded avatar-50 mr-3"
                                              alt="image">
-                                        <span th:text="*{name}">
-                                            <p class="mb-0"><small>This is test Product</small></p>
-                                        </span>
+                                        <p class="mb-0" th:text="*{name}"><small>This is test Product</small></p>
                                     </div>
                                 </td>
                                 <td th:text="${product.category.name}"></td>
@@ -77,10 +76,12 @@
                                         <a class="badge badge-info mr-2" data-toggle="tooltip" data-placement="top"
                                            title="" data-original-title="View"
                                            href="#"><i class="ri-eye-line mr-0"></i></a>
-                                        <a class="badge bg-success mr-2" data-toggle="tooltip" data-placement="top"
+                                        <a th:href="@{/admin/products/update(id=${product.id})}"
+                                           class="badge bg-success mr-2" data-toggle="tooltip" data-placement="top"
                                            title="" data-original-title="Edit"
                                            href="#"><i class="ri-pencil-line mr-0"></i></a>
-                                        <a class="badge bg-warning mr-2" data-toggle="tooltip" data-placement="top"
+                                        <a th:href="@{/admin/products/delete(id=${product.id})}"
+                                           class="badge bg-warning mr-2" data-toggle="tooltip" data-placement="top"
                                            title="" data-original-title="Delete"
                                            href="#"><i class="ri-delete-bin-line mr-0"></i></a>
                                     </div>
