--- a/src/main/resources/templates/common-user/head.html
+++ b/src/main/resources/templates/common-user/head.html
@@ -20,4 +20,5 @@
     <link rel="stylesheet" th:href="@{/etrade/assets/css/vendor/magnific-popup.css}">
     <link rel="stylesheet" th:href="@{/etrade/assets/css/vendor/base.css}">
     <link rel="stylesheet" th:href="@{/etrade/assets/css/style.min.css}">
+    <link rel="stylesheet" th:href="@{/etrade/assets/css/my-style.css}">
 </div>
