--- a/src/main/resources/templates/user/cart/cart.html
+++ b/src/main/resources/templates/user/cart/cart.html
@@ -38,11 +38,13 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="item : ${items}">
-                            <td class="product-thumbnail"><a href="single-product.html"><img
-                                    th:src="@{|/${item.product.getThumbnail()}|}" alt="Digital Product"></a>
+                        <tr th:each="item : ${listItems}">
+                            <td class="product-remove"><a href="#" class="remove-wishlist"><i class="fal fa-times"></i></a>
                             </td>
-                            <td class="product-title" th:text="${item.product.name}"><a href="single-product.html"></a>
+                            <td class="product-thumbnail"><a href="single-product.html"><img
+                                    th:src="@{'/uploads/' + ${item.images}}" alt="Digital Product"></a>
+                            </td>
+                            <td class="product-title" th:text="${item.productName}"><a href="single-product.html"></a>
                             </td>
                             <td class="product-price" data-title="Price" th:text="${item.unitPrice}"><span
                                     class="currency-symbol">$</span>
@@ -53,55 +55,7 @@
                                 </div>
                             </td>
                             <td class="product-subtotal" data-title="Subtotal" th:text="${item.totalPrice}"><span
-                                    class="currency-symbol">$</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="product-remove"><a href="#" class="remove-wishlist"><i class="fal fa-times"></i></a>
-                            </td>
-                            <td class="product-thumbnail"><a href="single-product.html"><img
-                                    src="assets/images/product/electric/product-01.png" alt="Digital Product"></a></td>
-                            <td class="product-title"><a href="single-product.html">Wireless PS Handler</a></td>
-                            <td class="product-price" data-title="Price"><span class="currency-symbol">$</span>124.00
-                            </td>
-                            <td class="product-quantity" data-title="Qty">
-                                <div class="pro-qty">
-                                    <input type="number" class="quantity-input" value="1">
-                                </div>
-                            </td>
-                            <td class="product-subtotal" data-title="Subtotal"><span class="currency-symbol">$</span>275.00
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="product-remove"><a href="#" class="remove-wishlist"><i class="fal fa-times"></i></a>
-                            </td>
-                            <td class="product-thumbnail"><a href="single-product-2.html"><img
-                                    src="assets/images/product/electric/product-02.png" alt="Digital Product"></a></td>
-                            <td class="product-title"><a href="single-product-2.html">Gradient Light Keyboard</a></td>
-                            <td class="product-price" data-title="Price"><span class="currency-symbol">$</span>124.00
-                            </td>
-                            <td class="product-quantity" data-title="Qty">
-                                <div class="pro-qty">
-                                    <input type="number" class="quantity-input" value="1">
-                                </div>
-                            </td>
-                            <td class="product-subtotal" data-title="Subtotal"><span class="currency-symbol">$</span>275.00
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="product-remove"><a href="#" class="remove-wishlist"><i class="fal fa-times"></i></a>
-                            </td>
-                            <td class="product-thumbnail"><a href="single-product-3.html"><img
-                                    src="assets/images/product/electric/product-03.png" alt="Digital Product"></a></td>
-                            <td class="product-title"><a href="single-product-3.html">HD CC Camera</a></td>
-                            <td class="product-price" data-title="Price"><span class="currency-symbol">$</span>124.00
-                            </td>
-                            <td class="product-quantity" data-title="Qty">
-                                <div class="pro-qty">
-                                    <input type="number" class="quantity-input" value="1">
-                                </div>
-                            </td>
-                            <td class="product-subtotal" data-title="Subtotal"><span class="currency-symbol">$</span>275.00
+                                    class="currency-symbol">VNĐ</span>
                             </td>
                         </tr>
                         </tbody>
