feature | add cart feature

--- a/src/main/resources/templates/common-user/header.html
+++ b/src/main/resources/templates/common-user/header.html
@@ -59,7 +59,7 @@
                         <ul class="mainmenu">
                             <!--              Start home-->
                             <li>
-                                <a th:href="@{/user/home}">Home</a>
+                                <a th:href="@{/user}">Home</a>
                             </li>
                             <!--              End home-->
 
