--- a/src/main/resources/templates/user/my-account.html
+++ b/src/main/resources/templates/user/my-account.html
@@ -39,9 +39,9 @@
         <div class="container">
             <div class="axil-dashboard-warp">
                 <div class="axil-dashboard-author">
-                    <div class="media" th:object="${userAccount}">
+                    <div class="media" th:object="${user}">
                         <div class="thumbnail">
-                            <img th:src="@{/etrade/assets/images/product/author1.png}" alt="Hello Annie">
+                            <img th:src="@{/etrade/assets/images/product/author1.png}" alt="Hello Guys">
                         </div>
                         <div class="media-body">
                             <h5 class="title mb-0">Hello <p th:value="*{fullName}"></p></h5>
