--- a/src/main/resources/templates/login/forgot-password.html
+++ b/src/main/resources/templates/login/forgot-password.html
@@ -8,7 +8,24 @@
 
 <div class="axil-signin-area">
 
-    <div th:insert="~{common-user/login :: background-signin}"></div>
+    <!-- Start Header -->
+    <div th:fragment="background-signin" class="signin-header">
+        <div class="row align-items-center">
+            <div class="col-sm-4">
+                <a th:href="@{/user}" class="site-logo"><img th:src="@{etrade/assets/images/logo/logo.png}" alt="logo"></a>
+            </div>
+            <div class="col-md-2 d-lg-block d-none">
+                <a th:href="@{/login}" class="back-btn"><i class="far fa-angle-left"></i></a>
+            </div>
+            <div class="col-xl-6 col-lg-4 col-sm-6">
+                <div class="singin-header-btn">
+                    <p>Not a member?</p>
+                    <a th:href="@{/register}" class="axil-btn btn-bg-secondary sign-up-btn">Sign Up Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Header -->
 
     <div class="row">
         <div class="col-xl-4 col-lg-6">
@@ -22,13 +39,18 @@
                     <h3 class="title">Forgot Password?</h3>
                     <p class="b2 mb--55">Enter the email address you used when you joined and we’ll send you
                         instructions to reset your password.</p>
-                    <form class="singin-form"
-                          th:action="@{/user/forgot-password}"
+                    <p th:if="${param.success}">
+                        <script type="text/javascript">
+                            alert('Renew password success. Go back login with new password !')
+                        </script>
+                    </p>
+                    <form id="forgot-password-form" class="singin-form"
+                          th:action="@{/forgot-password}"
                           method="post"
                     >
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" class="form-control" name="email"
+                            <input type="email" class="form-control" name="email" id="email"
                                    placeholder="Enter email to get password">
                         </div>
                         <div class="form-group">
@@ -44,5 +66,6 @@
 
 
 <div th:insert="~{common-user/script :: script}"></div>
+
 </body>
 </html>
