--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -137,7 +137,8 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <a th:href="@{/user/cart/checkout}" class="axil-btn btn-bg-primary checkout-btn">Process to
+                            <a th:href="@{/user/cart/checkout(cartId=${session.cartId})}"
+                               class="axil-btn btn-bg-primary checkout-btn">Process to
                                 Checkout</a>
                         </div>
                     </div>
